--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	],
 	"require": {
 		"yiisoft/yii": ">=1.1.13",
-		"mpdf/mpdf": "dev-master",
-		"ensepar/html2pdf": "dev-master"
+		"mpdf/mpdf": "^6.1",
+		"spipu/html2pdf": "^4.6"
 	}
 }
