--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "borales/yii-pdf",
+	"name": "roundpartner/yii-pdf",
 	"description": "Yii-wrapper for PHP-PDF libraries (mPDF, HTML2PDF)",
 	"keywords": ["yii", "pdf"],
 	"license": "New BSD License",
